--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,12 @@ dependencies:
   http: any
   geolocator: ^11.0.0
   permission_handler: ^11.3.0
+  #class different hashcode
+  equatable: ^2.0.5
+  #state management
+  flutter_bloc: ^8.1.3
+  dartz: any
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
